--- a/manifest.json
+++ b/manifest.json
@@ -3,13 +3,13 @@
     "lang": "en",
     "name": "TheRapUp",
     "scope": "/site/",
-    "display": "browser",
+    "display": "standalone",
     "start_url": "https://tomrycraft.github.io/site/",
     "short_name": "RapUP",
     "theme_color": "transparent",
     "description": "This site is all about discussing topics in the hiphop community",
     "orientation": "any",
-    "background_color": "transparent",
+    "background_color": "#ffffff",
     "related_applications": [],
     "prefer_related_applications": false,
     "icons": [
